<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/round_black_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/msg_id"/>
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/msg_input_id"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/msg_pw"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/msg_input_pw"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/msg_login"
            />

    </LinearLayout>
</RelativeLayout>